<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlanningPoker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nova__tarefa">Nova_TarefaActivity</string>
    <string name="title_activity_login_">PlanningPoker</string>
    <string name="title_activity_criar">CriarActivity</string>
    <string name="title_activity_votar_">Votar_Activity</string>
    <string name="title_activity_dailog">DailogActivity</string>
    <string name="title_activity_criar_item">PlanningPoker</string>
    <string name="title_activity_definir_voto">DefinirVotoActivity</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_fragment_android">FragmentAndroid</string>
    <string name="title_activity_votar">VotarActivity</string>
    <string name="nome_do_item">Nome do Item</string>
    <string name="botao_adicionar">Adicionar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="id_planning">ID Planning</string>
    <string name="senha">Senha</string>
    <string name="botao_entrar_plan">Entrar no Planning</string>   
	<string name="botao_criar_plan">Criar PlanningPoker</string>
	<string name="botao_salvar">Salvar</string>
</resources>
